# origami-sort

./: .gitignore  CMakeLists.txt
Origami/: avx2_utils.h  avx512_utils.h  bench_bmerge.cpp  bench_mtree.cpp  bench_sort.cpp  bench_sort_phases.cpp  commons.h  merge_utils.h  merger.h  sorter.h  utils.h  writer.h
